2006-01-13  Raja R Harinath  <rharinath@novell.com>

	* data/net_2_0/machine.config: Fix a couple of typos in type names.

2006-01-10  Raja R Harinath  <rharinath@novell.com>

	* scripts/Makefile.am (scripts_2_0): Add nunit-console2.

2006-01-09  Chris Toshok  <toshok@ximian.com>

	* data/net_2_0/machine.config: switch over to the 2.0
	configuration sections for System.Web and System.Web.Services.
	Also, add the configProtectedData stuff so we can encrypt config
	sections.

2006-01-08  Robert Jordan  <robertj@gmx.net>

	* man/mkbundle.1: Documented environment variables and Windows issues.

2006-01-06  Jonathan Pryor  <jonpryor@vt.edu>

	* data/config.in: s/libintl/intl/g.  Mono.Unix.Catalog DllImports "intl"
	  now, as intl.dll is the file actually shipped/available on Windows.

2006-01-04  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Add a CFLAGS_FOR_BUILD autoconf variable.

2006-01-03  Jonathan Pryor  <jonpryor@vt.edu>

	* configure.in: Add check for lutimes(2).  Mac OS X doesn't provide this.

2005-12-28  Kornél Pál  <kornelpal@hotmail.com>

	* runtime/Makefile.am (all-local): Enclose CC by apostrophes to fix
	  build when CC contains spaces.

2005-12-27  Jonathan Pryor  <jonpryor@vt.edu>

	* configure.in: Add check for <sys/mman.h>.  Fixes #77091.
	  Thanks to Ben Gamari for the patch.

2005-12-26  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Add support for solaris/x86.

	* runtime/Makefile.am (all-local): Pass CC to the mcs makefile.

2005-12-21  Wade Berrier <wberrier@novell.com>

	* mono-cairo.pc.in: use $prefix/lib instead of $libdir, 
	otherwise the cairo.dll can't be found on 64 bit architectures

2005-12-18  Raja R Harinath  <harinath@gmail.com>

	* configure.in (config.make): Don't blindly copy over $INSTALL,
	since it can be relative to the mono tree.  Use the same trick as
	ac_INSTALL, but against an absolute path.

2005-12-16 Wade Berrier <wberrier@novell.com>

	* configure.in: Unset AC_DISABLE_FAST_INSTALL