@@ -198,7 +198,6 @@ common_sources = \
 	ssapre-mini-ops.h \
 	driver.c	\
 	debug-mini.c	\
-	debug-debugger.c\
 	linear-scan.c	\
 	aot.c		\
 	graph.c		\
@@ -222,13 +221,19 @@ test_sources = 		\
 
 test_sources2 = generics.2.cs
 
+if MONO_DEBUGGER_SUPPORTED
+mono_debugger_sources = debug-debugger.c
+else
+mono_debugger_sources =
+endif
+
 regtests=basic.exe arrays.exe basic-float.exe basic-math.exe basic-long.exe objects.exe basic-calls.exe iltests.exe exceptions.exe bench.exe
 regtests2=generics.exe
 common_BURGSRC= $(srcdir)/inssel.brg $(srcdir)/inssel-float.brg
 
 if X86
 libmono_la_SOURCES = \
-	$(common_sources) $(x86_sources)
+	$(common_sources) $(x86_sources) $(mono_debugger_sources)
 
 arch_BURGSRC= $(srcdir)/inssel-long32.brg $(srcdir)/inssel-x86.brg
 arch_built=cpu-pentium.h
@@ -236,7 +241,7 @@ endif
 
 if AMD64
 libmono_la_SOURCES = \
-	$(common_sources) $(amd64_sources)
+	$(common_sources) $(amd64_sources) $(mono_debugger_sources)
 arch_BURGSRC= $(srcdir)/inssel-long.brg $(srcdir)/inssel-amd64.brg
 arch_built=cpu-amd64.h
 endif
